[HW-3] Добавлена загрузка данных из файла
